# yonde

./: .gitattributes  .gitignore  LICENSE  README.md  TODO.md  package.json
cbz/: Cargo.toml
cbz/examples/: list_images.rs
cbz/src/: archive.rs  error.rs  lib.rs
comic-ocr/: Cargo.toml
comic-ocr/src/: lib.rs  weights.rs
comic-ocr/src/comic_text_detector/: mod.rs  yolo_v5.rs
comic-ocr/src/manga_ocr/: mod.rs  model.rs  tokenizer.rs  weight.safetensors
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: jitendex.mdx.db  jitindex.audio.dict  jitindex.dict  lib.rs  main.rs  sakubi.html
src/components/: reader-container.js  reader-dropzone.js  reader-indicator.js  reader-nav.js  reader-toolbar.js  reader-viewer.js  theme-picker.js  theme-switcher.js
src/styles/: globals.css
