[package]
name = "cbz"
version = "0.1.0"
edition = "2024"

[dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "fs", "rt"] }
tokio-stream = "0.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
