[package]
name = "comic-ocr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
burn = { version = "0.20", default-features = false, features = ["wgpu", "ndarray"] }
tokenizers = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread"] }
safetensors = "0.7"
half = "2.4"
libloading = "0.8"

[features]
default = []
cuda = ["burn/cuda"]
metal = ["burn/metal"]
