[package]
name = "sakubi-reader-app"
version = "1.0.0"
description = "Native sakubi reader with integrated dictionary"
authors = ["Cristian Carlesso (@kentaromiura)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
zstd = "0.13.2"
rodio = "0.14.0"
magnum = { version = "1.0.1", features = ["with_rodio"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
