[package]
name = "mokuro-app"
version = "0.0.1"
description = "Native sakubi reader with integrated dictionary"
authors = ["Cristian Carlesso (@kentaromiura)"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mokuro_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
zstd = "0.13.2"
rodio = "0.14.0"
magnum = { version = "1.0.1", features = ["with_rodio"] }
